DB notebook for data factory

--- a/Code9_Working_with_Spark RDDs.ipynb
+++ b/Code9_Working_with_Spark RDDs.ipynb
@@ -240,7 +240,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "59261a52-79b4-4555-a99d-617eae944a52",
      "showTitle": false,
@@ -249,7 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "testdata = sc.textFile(\"/FileStore/tables/testdata.txt\")"
+    "testdata = sc.textFile(\"file:/Workspace/Users/anshu.india@outlook.com/databricks/testdata.txt\")"
    ]
   },
   {
@@ -257,7 +260,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "da385fca-b396-4ecb-a5eb-1da3f7d75b07",
      "showTitle": false,
@@ -289,7 +295,30 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "faed6b7f-eda3-436f-af4c-85aec923eb5f",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "type(testdata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9eddd5b4-2c4e-4b1f-8202-aed2f8692c8d",
      "showTitle": false,
@@ -298,7 +327,7 @@
    },
    "outputs": [],
    "source": [
-    "ratings.take(5)"
+    "testdata.take(5)"
    ]
   },
   {
@@ -581,7 +610,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b68bf62b-10eb-4ef4-bd9b-03b1d1398abb",
      "showTitle": false,
@@ -624,7 +656,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b4e0ec63-e9e7-42f3-a93d-4b1dcc9be6a4",
      "showTitle": false,
@@ -657,7 +692,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "977f62c8-cd59-434c-958e-0cf547dcc2ef",
      "showTitle": false,
@@ -676,7 +714,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "299c664a-95e5-46ad-a6d7-e5f868b547db",
      "showTitle": false,
@@ -712,7 +753,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6cd353a2-1378-4a30-9aa1-a12a07fee2a0",
      "showTitle": false,
@@ -730,7 +774,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "40c0b293-2137-479e-81a7-93f1c14c9f8e",
      "showTitle": false,
@@ -839,7 +886,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "33917c30-8fea-424d-8bfc-8830faaafcb6",
      "showTitle": false,
@@ -879,7 +929,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b733f924-cdb5-4146-b3c2-ec5f12556523",
      "showTitle": false,
@@ -914,7 +967,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0e65c317-b05d-4a1f-83d6-a5e4651e26c9",
      "showTitle": false,
@@ -949,7 +1005,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "f029f335-5584-42a0-964f-20bdf025e4d2",
      "showTitle": false,
@@ -985,7 +1044,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "710545cd-372a-43d9-8a10-53b5a0c31391",
      "showTitle": false,
@@ -1022,7 +1084,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a27d2f34-e688-45e4-bfa5-05b1f2b41ce5",
      "showTitle": false,
@@ -1270,6 +1335,51 @@
     "y = x.map(lambda n:n*n)\n",
     "z = x.zip(y)\n",
     "print(z.collect())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "69861b4f-5669-4fcb-a7ad-5b9a6dc748f9",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def add (x,y,z):\n",
+    "  return x + y + z\n",
+    "\n",
+    "add (7,4,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c6775d70-89ae-4261-95da-5148f7e0a4d8",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# lambda: anonymous functions\n",
+    "f = lambda x,y,z:x+y+z\n",
+    "f(4,5,3)"
    ]
   },
   {
@@ -1637,7 +1747,7 @@
     }
    },
    "source": [
-    "### Map Action\n",
+    "### Max Action\n",
     "\n",
     "*Return the maximum item in the RDD*"
    ]
